--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 
   <div class="search-bar">
-    <input type="text" id="searchInput" placeholder="Search Tamil songs..." />
+    <input type="text" id="searchInput" placeholder="Search songs..." />
     <button onclick="searchSongs()">Search</button>
     <button id="themeToggle">Toggle Theme</button>
   </div>
